--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
-  "name": "fcc-learn-node-with-express",
-  "version": "0.1.0",
-  "dependencies": {
-    "express": "^4.17.1",
-    "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.5",
-    "fcc-express-bground": "https://github.com/Em-Ant/fcc-express-bground-pkg.git"
-  },
+  "name": "fcc-mongo-mongoose-challenges",
+  "version": "0.0.1",
+  "description": "A boilerplate project",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
+  "dependencies": {
+    "express": "^4.17.1",
+    "body-parser": "^1.19.0",
+    "mongodb": "^3.5.7",
+    "mongoose": "^5.9.15"
+  },
   "engines": {
     "node": "4.4.5"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://hyperdev.com/#!/project/welcome-project"
+  },
+  "keywords": [
+    "node",
+    "hyperdev",
+    "express"
+  ],
+  "license": "MIT"
 }
